Fix flexbox issue with issue group and align elements to top.

--- a/app/assets/src/components/layout/accordion.scss
+++ b/app/assets/src/components/layout/accordion.scss
@@ -2,7 +2,6 @@
 
 .header {
   display: flex;
-  align-items: center;
 
   &.toggleable {
     cursor: pointer;
@@ -15,7 +14,7 @@
 }
 
 .toggleIcon {
-  padding: 0 10px;
+  padding: 10px;
   font-size: 22px;
   color: $medium-grey;
 
